// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`drawMarkers candle with volume events 1`] = `
[
  {
    "props": {},
    "type": "save",
  },
  {
    "props": {
      "height": 733,
      "width": 1475,
      "x": 100,
      "y": 17,
    },
    "type": "rect",
  },
  {
    "props": {
      "fillRule": "nonzero",
      "path": [
        {
          "props": {},
          "type": "beginPath",
        },
        {
          "props": {
            "height": 733,
            "width": 1475,
            "x": 100,
            "y": 17,
          },
          "type": "rect",
        },
      ],
    },
    "type": "clip",
  },
  {
    "props": {
      "value": "rgba(115, 191, 105, 0.5)",
    },
    "type": "fillStyle",
  },
  {
    "props": {
      "fillRule": "nonzero",
      "path": [
        {
          "props": {
            "height": 657,
            "width": 98,
            "x": 51,
            "y": 93,
          },
          "type": "rect",
        },
        {
          "props": {
            "height": 158,
            "width": 98,
            "x": 543,
            "y": 592,
          },
          "type": "rect",
        },
        {
          "props": {
            "height": 227,
            "width": 98,
            "x": 707,
            "y": 523,
          },
          "type": "rect",
        },
      ],
    },
    "type": "fill",
  },
  {
    "props": {
      "value": "rgba(242, 73, 92, 0.5)",
    },
    "type": "fillStyle",
  },
  {
    "props": {
      "fillRule": "nonzero",
      "path": [
        {
          "props": {
            "height": 366,
            "width": 98,
            "x": 215,
            "y": 384,
          },
          "type": "rect",
        },
        {
          "props": {
            "height": 632,
            "width": 98,
            "x": 379,
            "y": 118,
          },
          "type": "rect",
        },
        {
          "props": {
            "height": 0,
            "width": 98,
            "x": 870,
            "y": 750,
          },
          "type": "rect",
        },
        {
          "props": {
            "height": 396,
            "width": 98,
            "x": 1034,
            "y": 354,
          },
          "type": "rect",
        },
        {
          "props": {
            "height": 640,
            "width": 98,
            "x": 1198,
            "y": 110,
          },
          "type": "rect",
        },
        {
          "props": {
            "height": 60,
            "width": 98,
            "x": 1362,
            "y": 690,
          },
          "type": "rect",
        },
        {
          "props": {
            "height": 288,
            "width": 98,
            "x": 1526,
            "y": 462,
          },
          "type": "rect",
        },
      ],
    },
    "type": "fill",
  },
  {
    "props": {
      "value": "rgba(136, 136, 136, 0.5)",
    },
    "type": "fillStyle",
  },
  {
    "props": {
      "fillRule": "nonzero",
      "path": [],
    },
    "type": "fill",
  },
  {
    "props": {
      "value": "#73bf69",
    },
    "type": "fillStyle",
  },
  {
    "props": {
      "fillRule": "nonzero",
      "path": [
        {
          "props": {
            "height": 0,
            "width": 2,
            "x": 99,
            "y": 750,
          },
          "type": "rect",
        },
        {
          "props": {
            "height": 1,
            "width": 98,
            "x": 51,
            "y": 750,
          },
          "type": "rect",
        },
        {
          "props": {
            "height": 0,
            "width": 2,
            "x": 591,
            "y": 750,
          },
          "type": "rect",
        },
        {
          "props": {
            "height": 1,
            "width": 98,
            "x": 543,
            "y": 750,
          },
          "type": "rect",
        },
        {
          "props": {
            "height": 0,
            "width": 2,
            "x": 755,
            "y": 750,
          },
          "type": "rect",
        },
        {
          "props": {
            "height": 1,
            "width": 98,
            "x": 707,
            "y": 750,
          },
          "type": "rect",
        },
      ],
    },
    "type": "fill",
  },
  {
    "props": {
      "value": "#f2495c",
    },
    "type": "fillStyle",
  },
  {
    "props": {
      "fillRule": "nonzero",
      "path": [
        {
          "props": {
            "height": 0,
            "width": 2,
            "x": 263,
            "y": 750,
          },
          "type": "rect",
        },
        {
          "props": {
            "height": 1,
            "width": 98,
            "x": 215,
            "y": 750,
          },
          "type": "rect",
        },
        {
          "props": {
            "height": 0,
            "width": 2,
            "x": 427,
            "y": 750,
          },
          "type": "rect",
        },
        {
          "props": {
            "height": 1,
            "width": 98,
            "x": 379,
            "y": 750,
          },
          "type": "rect",
        },
        {
          "props": {
            "height": 0,
            "width": 2,
            "x": 918,
            "y": 750,
          },
          "type": "rect",
        },
        {
          "props": {
            "height": 1,
            "width": 98,
            "x": 870,
            "y": 750,
          },
          "type": "rect",
        },
        {
          "props": {
            "height": 0,
            "width": 2,
            "x": 1082,
            "y": 750,
          },
          "type": "rect",
        },
        {
          "props": {
            "height": 1,
            "width": 98,
            "x": 1034,
            "y": 750,
          },
          "type": "rect",
        },
        {
          "props": {
            "height": 0,
            "width": 2,
            "x": 1246,
            "y": 750,
          },
          "type": "rect",
        },
        {
          "props": {
            "height": 1,
            "width": 98,
            "x": 1198,
            "y": 750,
          },
          "type": "rect",
        },
        {
          "props": {
            "height": 0,
            "width": 2,
            "x": 1410,
            "y": 750,
          },
          "type": "rect",
        },
        {
          "props": {
            "height": 1,
            "width": 98,
            "x": 1362,
            "y": 750,
          },
          "type": "rect",
        },
        {
          "props": {
            "height": 0,
            "width": 2,
            "x": 1574,
            "y": 750,
          },
          "type": "rect",
        },
        {
          "props": {
            "height": 1,
            "width": 98,
            "x": 1526,
            "y": 750,
          },
          "type": "rect",
        },
      ],
    },
    "type": "fill",
  },
  {
    "props": {
      "value": "#888888",
    },
    "type": "fillStyle",
  },
  {
    "props": {
      "fillRule": "nonzero",
      "path": [],
    },
    "type": "fill",
  },
  {
    "props": {
      "value": "destination-out",
    },
    "type": "globalCompositeOperation",
  },
  {
    "props": {
      "fillRule": "nonzero",
      "path": [],
    },
    "type": "fill",
  },
  {
    "props": {},
    "type": "restore",
  },
]
`;

exports[`drawMarkers options Candle Style: CandleStyle.OHLCBars events 1`] = `
[
  {
    "props": {},
    "type": "save",
  },
  {
    "props": {
      "height": 733,
      "width": 1475,
      "x": 100,
      "y": 17,
    },
    "type": "rect",
  },
  {
    "props": {
      "fillRule": "nonzero",
      "path": [
        {
          "props": {},
          "type": "beginPath",
        },
        {
          "props": {
            "height": 733,
            "width": 1475,
            "x": 100,
            "y": 17,
          },
          "type": "rect",
        },
      ],
    },
    "type": "clip",
  },
  {
    "props": {
      "value": "#73bf69",
    },
    "type": "fillStyle",
  },
  {
    "props": {
      "fillRule": "nonzero",
      "path": [
        {
          "props": {
            "height": 276,
            "width": 2,
            "x": 99,
            "y": 81,
          },
          "type": "rect",
        },
        {
          "props": {
            "height": 2,
            "width": 49,
            "x": 51,
            "y": 325,
          },
          "type": "rect",
        },
        {
          "props": {
            "height": 2,
            "width": 49,
            "x": 100,
            "y": 134,
          },
          "type": "rect",
        },
        {
          "props": {
            "height": 117,
            "width": 2,
            "x": 591,
            "y": 251,
          },
          "type": "rect",
        },
        {
          "props": {
            "height": 2,
            "width": 49,
            "x": 543,
            "y": 368,
          },
          "type": "rect",
        },
        {
          "props": {
            "height": 2,
            "width": 49,
            "x": 592,
            "y": 293,
          },
          "type": "rect",
        },
        {
          "props": {
            "height": 117,
            "width": 2,
            "x": 755,
            "y": 251,
          },
          "type": "rect",
        },
        {
          "props": {
            "height": 2,
            "width": 49,
            "x": 707,
            "y": 368,
          },
          "type": "rect",
        },
        {
          "props": {
            "height": 2,
            "width": 49,
            "x": 756,
            "y": 357,
          },
          "type": "rect",
        },
      ],
    },
    "type": "fill",
  },
  {
    "props": {
      "value": "#f2495c",
    },
    "type": "fillStyle",
  },
  {
    "props": {
      "fillRule": "nonzero",
      "path": [
        {
          "props": {
            "height": 212,
            "width": 2,
            "x": 263,
            "y": 102,
          },
          "type": "rect",
        },
        {
          "props": {
            "height": 2,
            "width": 49,
            "x": 215,
            "y": 102,
          },
          "type": "rect",
        },
        {
          "props": {
            "height": 2,
            "width": 49,
            "x": 264,
            "y": 314,
          },
          "type": "rect",
        },
        {
          "props": {
            "height": 276,
            "width": 2,
            "x": 427,
            "y": 102,
          },
          "type": "rect",
        },
        {
          "props": {
            "height": 2,
            "width": 49,
            "x": 379,
            "y": 102,
          },
          "type": "rect",
        },
        {
          "props": {
            "height": 2,
            "width": 49,
            "x": 428,
            "y": 368,
          },
          "type": "rect",
        },
        {
          "props": {
            "height": 53,
            "width": 2,
            "x": 918,
            "y": 357,
          },
          "type": "rect",
        },
        {
          "props": {
            "height": 2,
            "width": 49,
            "x": 870,
            "y": 357,
          },
          "type": "rect",
        },
        {
          "props": {
            "height": 2,
            "width": 49,
            "x": 919,
            "y": 399,
          },
          "type": "rect",
        },
        {
          "props": {
            "height": 106,
            "width": 2,
            "x": 1082,
            "y": 357,
          },
          "type": "rect",
        },
        {
          "props": {
            "height": 2,
            "width": 49,
            "x": 1034,
            "y": 357,
          },
          "type": "rect",
        },
        {
          "props": {
            "height": 2,
            "width": 49,
            "x": 1083,
            "y": 453,
          },
          "type": "rect",
        },
        {
          "props": {
            "height": 85,
            "width": 2,
            "x": 1246,
            "y": 399,
          },
          "type": "rect",
        },
        {
          "props": {
            "height": 2,
            "width": 49,
            "x": 1198,
            "y": 431,
          },
          "type": "rect",
        },
        {
          "props": {
            "height": 2,
            "width": 49,
            "x": 1247,
            "y": 484,
          },
          "type": "rect",
        },
        {
          "props": {
            "height": 117,
            "width": 2,
            "x": 1410,
            "y": 399,
          },
          "type": "rect",
        },
        {
          "props": {
            "height": 2,
            "width": 49,
            "x": 1362,
            "y": 431,
          },
          "type": "rect",
        },
        {
          "props": {
            "height": 2,
            "width": 49,
            "x": 1411,
            "y": 516,
          },
          "type": "rect",
        },
        {
          "props": {
            "height": 170,
            "width": 2,
            "x": 1574,
            "y": 516,
          },
          "type": "rect",
        },
        {
          "props": {
            "height": 2,
            "width": 49,
            "x": 1526,
            "y": 516,
          },
          "type": "rect",
        },
        {
          "props": {
            "height": 2,
            "width": 49,
            "x": 1575,
            "y": 612,
          },
          "type": "rect",
        },
      ],
    },
    "type": "fill",
  },
  {
    "props": {
      "value": "#888888",
    },
    "type": "fillStyle",
  },
  {
    "props": {
      "fillRule": "nonzero",
      "path": [],
    },
    "type": "fill",
  },
  {
    "props": {
      "value": "destination-out",
    },
    "type": "globalCompositeOperation",
  },
  {
    "props": {
      "fillRule": "nonzero",
      "path": [],
    },
    "type": "fill",
  },
  {
    "props": {},
    "type": "restore",
  },
]
`;

exports[`drawMarkers options Color strategy: CloseClose events 1`] = `
[
  {
    "props": {},
    "type": "save",
  },
  {
    "props": {
      "height": 733,
      "width": 1475,
      "x": 100,
      "y": 17,
    },
    "type": "rect",
  },
  {
    "props": {
      "fillRule": "nonzero",
      "path": [
        {
          "props": {},
          "type": "beginPath",
        },
        {
          "props": {
            "height": 733,
            "width": 1475,
            "x": 100,
            "y": 17,
          },
          "type": "rect",
        },
      ],
    },
    "type": "clip",
  },
  {
    "props": {
      "value": "#73bf69",
    },
    "type": "fillStyle",
  },
  {
    "props": {
      "fillRule": "nonzero",
      "path": [
        {
          "props": {
            "height": 117,
            "width": 2,
            "x": 591,
            "y": 251,
          },
          "type": "rect",
        },
        {
          "props": {
            "height": 75,
            "width": 98,
            "x": 543,
            "y": 293,
          },
          "type": "rect",
        },
      ],
    },
    "type": "fill",
  },
  {
    "props": {
      "value": "#f2495c",
    },
    "type": "fillStyle",
  },
  {
    "props": {
      "fillRule": "nonzero",
      "path": [
        {
          "props": {
            "height": 212,
            "width": 2,
            "x": 263,
            "y": 102,
          },
          "type": "rect",
        },
        {
          "props": {
            "height": 212,
            "width": 98,
            "x": 215,
            "y": 102,
          },
          "type": "rect",
        },
        {
          "props": {
            "height": 276,
            "width": 2,
            "x": 427,
            "y": 102,
          },
          "type": "rect",
        },
        {
          "props": {
            "height": 266,
            "width": 98,
            "x": 379,
            "y": 102,
          },
          "type": "rect",
        },
        {
          "props": {
            "height": 117,
            "width": 2,
            "x": 755,
            "y": 251,
          },
          "type": "rect",
        },
        {
          "props": {
            "height": 11,
            "width": 98,
            "x": 707,
            "y": 357,
          },
          "type": "rect",
        },
        {
          "props": {
            "height": 53,
            "width": 2,
            "x": 918,
            "y": 357,
          },
          "type": "rect",
        },
        {
          "props": {
            "height": 42,
            "width": 98,
            "x": 870,
            "y": 357,
          },
          "type": "rect",
        },
        {
          "props": {
            "height": 106,
            "width": 2,
            "x": 1082,
            "y": 357,
          },
          "type": "rect",
        },
        {
          "props": {
            "height": 96,
            "width": 98,
            "x": 1034,
            "y": 357,
          },
          "type": "rect",
        },
        {
          "props": {
            "height": 85,
            "width": 2,
            "x": 1246,
            "y": 399,
          },
          "type": "rect",
        },
        {
          "props": {
            "height": 53,
            "width": 98,
            "x": 1198,
            "y": 431,
          },
          "type": "rect",
        },
        {
          "props": {
            "height": 117,
            "width": 2,
            "x": 1410,
            "y": 399,
          },
          "type": "rect",
        },
        {
          "props": {
            "height": 85,
            "width": 98,
            "x": 1362,
            "y": 431,
          },
          "type": "rect",
        },
        {
          "props": {
            "height": 170,
            "width": 2,
            "x": 1574,
            "y": 516,
          },
          "type": "rect",
        },
        {
          "props": {
            "height": 96,
            "width": 98,
            "x": 1526,
            "y": 516,
          },
          "type": "rect",
        },
      ],
    },
    "type": "fill",
  },
  {
    "props": {
      "value": "#888888",
    },
    "type": "fillStyle",
  },
  {
    "props": {
      "fillRule": "nonzero",
      "path": [
        {
          "props": {
            "height": 276,
            "width": 2,
            "x": 99,
            "y": 81,
          },
          "type": "rect",
        },
        {
          "props": {
            "height": 191,
            "width": 98,
            "x": 51,
            "y": 134,
          },
          "type": "rect",
        },
      ],
    },
    "type": "fill",
  },
  {
    "props": {
      "value": "destination-out",
    },
    "type": "globalCompositeOperation",
  },
  {
    "props": {
      "fillRule": "nonzero",
      "path": [
        {
          "props": {
            "height": 187,
            "width": 94,
            "x": 53,
            "y": 136,
          },
          "type": "rect",
        },
        {
          "props": {
            "height": 71,
            "width": 94,
            "x": 545,
            "y": 295,
          },
          "type": "rect",
        },
        {
          "props": {
            "height": 7,
            "width": 94,
            "x": 709,
            "y": 359,
          },
          "type": "rect",
        },
      ],
    },
    "type": "fill",
  },
  {
    "props": {},
    "type": "restore",
  },
]
`;

exports[`drawMarkers options Color strategy: OpenClose events 1`] = `
[
  {
    "props": {},
    "type": "save",
  },
  {
    "props": {
      "height": 733,
      "width": 1475,
      "x": 100,
      "y": 17,
    },
    "type": "rect",
  },
  {
    "props": {
      "fillRule": "nonzero",
      "path": [
        {
          "props": {},
          "type": "beginPath",
        },
        {
          "props": {
            "height": 733,
            "width": 1475,
            "x": 100,
            "y": 17,
          },
          "type": "rect",
        },
      ],
    },
    "type": "clip",
  },
  {
    "props": {
      "value": "#73bf69",
    },
    "type": "fillStyle",
  },
  {
    "props": {
      "fillRule": "nonzero",
      "path": [
        {
          "props": {
            "height": 276,
            "width": 2,
            "x": 99,
            "y": 81,
          },
          "type": "rect",
        },
        {
          "props": {
            "height": 191,
            "width": 98,
            "x": 51,
            "y": 134,
          },
          "type": "rect",
        },
        {
          "props": {
            "height": 117,
            "width": 2,
            "x": 591,
            "y": 251,
          },
          "type": "rect",
        },
        {
          "props": {
            "height": 75,
            "width": 98,
            "x": 543,
            "y": 293,
          },
          "type": "rect",
        },
        {
          "props": {
            "height": 117,
            "width": 2,
            "x": 755,
            "y": 251,
          },
          "type": "rect",
        },
        {
          "props": {
            "height": 11,
            "width": 98,
            "x": 707,
            "y": 357,
          },
          "type": "rect",
        },
      ],
    },
    "type": "fill",
  },
  {
    "props": {
      "value": "#f2495c",
    },
    "type": "fillStyle",
  },
  {
    "props": {
      "fillRule": "nonzero",
      "path": [
        {
          "props": {
            "height": 212,
            "width": 2,
            "x": 263,
            "y": 102,
          },
          "type": "rect",
        },
        {
          "props": {
            "height": 212,
            "width": 98,
            "x": 215,
            "y": 102,
          },
          "type": "rect",
        },
        {
          "props": {
            "height": 276,
            "width": 2,
            "x": 427,
            "y": 102,
          },
          "type": "rect",
        },
        {
          "props": {
            "height": 266,
            "width": 98,
            "x": 379,
            "y": 102,
          },
          "type": "rect",
        },
        {
          "props": {
            "height": 53,
            "width": 2,
            "x": 918,
            "y": 357,
          },
          "type": "rect",
        },
        {
          "props": {
            "height": 42,
            "width": 98,
            "x": 870,
            "y": 357,
          },
          "type": "rect",
        },
        {
          "props": {
            "height": 106,
            "width": 2,
            "x": 1082,
            "y": 357,
          },
          "type": "rect",
        },
        {
          "props": {
            "height": 96,
            "width": 98,
            "x": 1034,
            "y": 357,
          },
          "type": "rect",
        },
        {
          "props": {
            "height": 85,
            "width": 2,
            "x": 1246,
            "y": 399,
          },
          "type": "rect",
        },
        {
          "props": {
            "height": 53,
            "width": 98,
            "x": 1198,
            "y": 431,
          },
          "type": "rect",
        },
        {
          "props": {
            "height": 117,
            "width": 2,
            "x": 1410,
            "y": 399,
          },
          "type": "rect",
        },
        {
          "props": {
            "height": 85,
            "width": 98,
            "x": 1362,
            "y": 431,
          },
          "type": "rect",
        },
        {
          "props": {
            "height": 170,
            "width": 2,
            "x": 1574,
            "y": 516,
          },
          "type": "rect",
        },
        {
          "props": {
            "height": 96,
            "width": 98,
            "x": 1526,
            "y": 516,
          },
          "type": "rect",
        },
      ],
    },
    "type": "fill",
  },
  {
    "props": {
      "value": "#888888",
    },
    "type": "fillStyle",
  },
  {
    "props": {
      "fillRule": "nonzero",
      "path": [],
    },
    "type": "fill",
  },
  {
    "props": {
      "value": "destination-out",
    },
    "type": "globalCompositeOperation",
  },
  {
    "props": {
      "fillRule": "nonzero",
      "path": [],
    },
    "type": "fill",
  },
  {
    "props": {},
    "type": "restore",
  },
]
`;
